// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidateVerificationCodeStep /> render() should render the component with the verification code validation and password if user has one set 1`] = `
<div>
  <div
    class="headingBold"
  >
    Step 3: 
    Verify your code
  </div>
  <div
    class="textSection mb16"
  >
    Enter your password.
  </div>
  <div>
    <div
      class="wrapper"
    >
      <input
        class="input"
        id="input-text-1"
        name="userPassword"
        placeholder="Enter your password"
        type="password"
        value=""
      />
    </div>
  </div>
  <div
    class="textSection mb16"
  >
    Enter a verification code from your authenticator app or a recovery code
  </div>
  <div>
    <div
      class="wrapper"
    >
      <input
        class="input"
        id="input-text-3"
        name="verificationCode"
        placeholder="Enter 6-digit verification code from app or recovery code"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<ValidateVerificationCodeStep /> render() should render the component with the verification code validation and without password none set 1`] = `
<div>
  <div
    class="headingBold"
  >
    Step 3: 
    Verify your code
  </div>
  <div
    class="textSection mb16"
  >
    Enter a verification code from your authenticator app or a recovery code
  </div>
  <div>
    <div
      class="wrapper"
    >
      <input
        class="input"
        id="input-text-7"
        name="verificationCode"
        placeholder="Enter 6-digit verification code from app or recovery code"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<ValidateVerificationCodeStep /> render() should show a different title when used as the first step of an update 1`] = `
<div>
  <div
    class="headingBold"
  >
    Verify your code
  </div>
  <div
    class="textSection mb16"
  >
    Enter a verification code from your authenticator app or a recovery code
  </div>
  <div>
    <div
      class="wrapper"
    >
      <input
        class="input"
        id="input-text-11"
        name="verificationCode"
        placeholder="Enter 6-digit verification code from app or recovery code"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
